--- a/Tabelas.html
+++ b/Tabelas.html
@@ -1,4 +1,14 @@
-<!--TABELAS-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabela no HTML</title>
+</head>
+<body>
+
+    <!--TABELAS-->
 
 <!--Modificar a Tabela-->
 <!--              Borda da tabela   Cor da tabela-->>
@@ -35,3 +45,6 @@
     </tr>
 
 </table>
+    
+</body>
+</html>
